--- a/requirements.txt
+++ b/requirements.txt
@@ -1,318 +1,247 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-_anaconda_depends=5.3.1=py37_0
-_ipyw_jlab_nb_ext_conf=0.1.0=py37_0
-alabaster=0.7.12=py37_0
-altair=4.2.0=pypi_0
-altgraph=0.17=pypi_0
-anaconda=custom=py37_1
-anaconda-client=1.7.2=py37_0
-anaconda-navigator=1.9.7=py37_0
-anaconda-project=0.8.2=py37_0
-appdirs=1.4.4=pyhd3eb1b0_0
-argcomplete=1.12.3=pypi_0
-asn1crypto=0.24.0=py37_0
-astor=0.8.1=pypi_0
-astroid=2.2.5=py37_0
-astropy=3.1.2=py37he774522_0
-atomicwrites=1.3.0=py37_1
-attrs=19.1.0=py37_1
-automat=20.2.0=py_0
-babel=2.6.0=py37_0
-backcall=0.1.0=py37_0
-backports=1.0=py37_1
-backports-zoneinfo=0.2.1=pypi_0
-backports.os=0.1.1=py37_0
-backports.shutil_get_terminal_size=1.0.0=py37_2
-base58=2.1.1=pypi_0
-bcrypt=3.1.6=py37he774522_0
-beautifulsoup4=4.7.1=py37_1
-bitarray=0.8.3=py37hfa6e2cd_0
-bkcharts=0.2=py37_0
-blas=1.0=mkl
-blaze=0.11.3=py37_0
-bleach=3.1.0=py37_0
-blinker=1.4=pypi_0
-blosc=1.15.0=h7bd577a_0
-bokeh=1.0.4=py37_0
-boto=2.49.0=py37_0
-bottleneck=1.2.1=py37h452e1ab_1
-bzip2=1.0.6=hfa6e2cd_5
-ca-certificates=2021.10.8=h5b45459_0
-cachetools=5.0.0=pypi_0
-certifi=2021.10.8=py37h03978a9_1
-cffi=1.12.2=py37h7a1dbc1_1
-chardet=3.0.4=py37_1
-click=7.0=py37_0
-cloudpickle=0.8.0=py37_0
-clyent=1.2.2=py37_1
-colorama=0.4.1=py37_0
-comtypes=1.1.7=py37_0
-conda-verify=3.1.1=py37_0
-console_shortcut=0.1.1=3
-constantly=15.1.0=py37h28b3542_0
-contextlib2=0.5.5=py37_0
-cryptography=2.6.1=py37h7a1dbc1_0
-curl=7.64.0=h2a8f88b_2
-cycler=0.10.0=py37_0
-cython=0.29.6=py37ha925a31_0
-cytoolz=0.9.0.1=py37hfa6e2cd_1
-dask=1.1.4=py37_1
-dask-core=1.1.4=py37_1
-datashape=0.5.4=py37haa95532_1
-debugpy=1.5.1=pypi_0
-decorator=4.4.0=py37_1
-defusedxml=0.5.0=py37_1
-distributed=1.26.0=py37_1
-docutils=0.14=py37_0
-entrypoints=0.3=py37_0
-et_xmlfile=1.0.1=py37_0
-fastcache=1.0.2=py37hfa6e2cd_2
-filelock=3.0.10=py37_0
-flask=1.0.2=py37_1
-flask-cors=3.0.10=pyhd3eb1b0_0
-freetype=2.9.1=ha9979f8_1
-future=0.17.1=py37_0
-geographiclib=1.50=pypi_0
-geopy=1.22.0=pypi_0
-get_terminal_size=1.0.0=h38e98db_0
-gevent=1.4.0=py37he774522_0
-gitdb=4.0.9=pypi_0
-gitpython=3.1.24=pypi_0
-glob2=0.6=py37_1
-greenlet=0.4.15=py37hfa6e2cd_0
-h5py=2.9.0=py37h5e291fa_0
-hdf5=1.10.4=h7ebc959_0
-heapdict=1.0.0=py37_2
-html5lib=1.0.1=py37_0
-hyperlink=21.0.0=pyhd3eb1b0_0
-icc_rt=2019.0.0=h0cc432a_1
-icu=58.2=ha66f8fd_1
-idna=2.8=py37_0
-imageio=2.5.0=py37_0
-imagesize=1.1.0=py37_0
-importlib_metadata=0.8=py37_0
-incremental=21.3.0=pyhd3eb1b0_0
-intel-openmp=2019.3=203
-ipykernel=6.6.0=pypi_0
-ipython=7.30.1=pypi_0
-ipython_genutils=0.2.0=py37_0
-ipywidgets=7.4.2=py37_0
-isort=4.3.16=py37_0
-itsdangerous=1.1.0=py37_0
-jdcal=1.4=py37_0
-jedi=0.18.1=pypi_0
-jinja2=3.0.3=pypi_0
-jpeg=9b=hb83a4c4_2
-jsonschema=3.0.1=py37_0
-jupyter=1.0.0=py37_7
-jupyter_client=5.2.4=py37_0
-jupyter_console=6.0.0=py37_0
-jupyter_core=4.4.0=py37_0
-jupyterlab=0.35.4=py37hf63ae98_0
-jupyterlab_launcher=0.13.1=py_2
-jupyterlab_server=0.2.0=py37_0
-keyring=18.0.0=py37_0
-kiwisolver=1.0.1=py37h6538335_0
-krb5=1.16.1=hc04afaa_7
-lazy-object-proxy=1.3.1=py37hfa6e2cd_2
-libarchive=3.3.3=h0643e63_5
-libcurl=7.64.0=h2a8f88b_2
-libiconv=1.15=h1df5818_7
-liblief=0.9.0=ha925a31_2
-libpng=1.6.36=h2a8f88b_0
-libsodium=1.0.16=h9d3ae62_0
-libssh2=1.8.0=h7a1dbc1_4
-libtiff=4.0.10=hb898794_2
-libxml2=2.9.9=h464c3ec_0
-libxslt=1.1.33=h579f668_0
-llvmlite=0.28.0=py37ha925a31_0
-locket=0.2.0=py37_1
-lxml=4.3.2=py37h1350720_0
-lz4-c=1.8.1.2=h2fa13f4_0
-lzo=2.10=h6df0209_2
-m2w64-gcc-libgfortran=5.3.0=6
-m2w64-gcc-libs=5.3.0=7
-m2w64-gcc-libs-core=5.3.0=7
-m2w64-gmp=6.1.0=2
-m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-markupsafe=2.0.1=pypi_0
-matplotlib=3.0.3=py37hc8f65d3_0
-matplotlib-base=3.1.1=py37h2852a4a_1
-matplotlib-inline=0.1.3=pypi_0
-mccabe=0.6.1=py37_1
-menuinst=1.4.16=py37he774522_0
-mistune=0.8.4=py37he774522_0
-mkl=2019.3=203
-mkl-service=1.1.2=py37hb782905_5
-mkl_fft=1.0.10=py37h14836fe_0
-mkl_random=1.0.2=py37h343c172_0
-more-itertools=6.0.0=py37_0
-mpmath=1.1.0=py37_0
-msgpack-python=0.6.1=py37h74a9793_1
-msys2-conda-epoch=20160418=1
-multipledispatch=0.6.0=py37_0
-navigator-updater=0.2.1=py37_0
-nbconvert=5.4.1=py37_3
-nbformat=4.4.0=py37_0
-networkx=2.2=py37_1
-nltk=3.4=py37_1
-nose=1.3.7=py37_2
-notebook=5.7.8=py37_0
-numba=0.43.1=py37hf9181ef_0
-numexpr=2.6.9=py37hdce8814_0
-numpy=1.16.2=py37h19fb1c0_0
-numpy-base=1.16.2=py37hc3f5095_0
-numpydoc=0.8.0=py37_0
-odo=0.5.1=py37_0
-olefile=0.46=py37_0
-openpyxl=2.6.1=py37_1
-openssl=1.1.1f=hfa6e2cd_0
-packaging=19.0=py37_0
-pandas=0.24.2=py37ha925a31_0
-pandoc=2.2.3.2=0
-pandocfilters=1.4.2=py37_1
-parso=0.8.3=pypi_0
-partd=0.3.10=py37_1
-path.py=11.5.0=py37_0
-pathlib2=2.3.3=py37_0
-patsy=0.5.1=py37_0
-pefile=2019.4.18=pypi_0
-pep8=1.7.1=py37_0
-pickleshare=0.7.5=py37_0
-pillow=8.4.0=pypi_0
-pip=19.0.3=py37_0
-pkginfo=1.5.0.1=py37_0
-plotly=5.5.0=pypi_0
-pluggy=0.9.0=py37_0
-ply=3.11=py37_0
-powershell_shortcut=0.0.1=2
-prometheus_client=0.6.0=py37_0
-prompt-toolkit=3.0.5=pyha847dfd_0
-prompt_toolkit=2.0.9=py37_0
-protobuf=3.19.1=pypi_0
-psutil=5.6.1=py37he774522_0
-py=1.8.0=py37_0
-py-lief=0.9.0=py37ha925a31_2
-pyarrow=6.0.1=pypi_0
-pyasn1=0.4.8=pyhd3eb1b0_0
-pyasn1-modules=0.2.8=py_0
-pycodestyle=2.5.0=py37_0
-pycosat=0.6.3=py37hfa6e2cd_0
-pycparser=2.19=py37_0
-pycrypto=2.6.1=py37hfa6e2cd_9
-pycurl=7.43.0.2=py37h7a1dbc1_0
-pydeck=0.7.1=pypi_0
-pyflakes=2.1.1=py37_0
-pygments=2.3.1=py37_0
-pyhamcrest=2.0.2=pyhd3eb1b0_2
-pyinstaller=3.6=pypi_0
-pylint=2.3.1=py37_0
-pympler=1.0.1=pypi_0
-pyodbc=4.0.26=py37ha925a31_0
-pyopenssl=19.0.0=py37_0
-pyparsing=2.3.1=py37_0
-pyqt=5.9.2=py37h6538335_2
-pyreadline=2.1=py37_1
-pyrsistent=0.14.11=py37he774522_0
-pysocks=1.6.8=py37_0
-pytables=3.5.1=py37h1da0976_0
-pytest=4.3.1=py37_0
-pytest-arraydiff=0.3=py37h39e3cac_0
-pytest-astropy=0.5.0=py37_0
-pytest-doctestplus=0.3.0=py37_0
-pytest-openfiles=0.3.2=py37_0
-pytest-remotedata=0.3.1=py37_0
-python=3.7.3=h8c8aaf0_0
-python-dateutil=2.8.0=py37_0
-python-libarchive-c=2.8=py37_6
-python_abi=3.7=2_cp37m
-pytz=2018.9=py37_0
-pytz-deprecation-shim=0.1.0.post0=pypi_0
-pywavelets=1.0.2=py37h8c2d366_0
-pywin32=223=py37hfa6e2cd_1
-pywin32-ctypes=0.2.0=pypi_0
-pywinpty=0.5.5=py37_1000
-pyyaml=5.1=py37he774522_0
-pyzmq=18.0.0=py37ha925a31_0
-qt=5.9.7=vc14h73c81de_0
-qtawesome=0.5.7=py37_1
-qtconsole=4.4.3=py37_0
-qtpy=1.7.0=py37_1
-requests=2.21.0=py37_0
-retrying=1.3.3=py37_2
-rope=0.12.0=py37_0
-ruamel_yaml=0.15.46=py37hfa6e2cd_0
-scikit-image=0.14.2=py37ha925a31_0
-scikit-learn=0.20.3=py37h343c172_0
-scipy=1.2.1=py37h29ff71c_0
-seaborn=0.9.0=py37_0
-send2trash=1.5.0=py37_0
-service_identity=18.1.0=pyhd3eb1b0_1
-setuptools=40.8.0=py37_0
-simplegeneric=0.8.1=py37_2
-singledispatch=3.4.0.3=py37_0
-sip=4.19.8=py37h6538335_0
-six=1.12.0=py37_0
-smmap=5.0.0=pypi_0
-snappy=1.1.7=h777316e_3
-snowballstemmer=1.2.1=py37_0
-sortedcollections=1.1.2=py37_0
-sortedcontainers=2.1.0=py37_0
-soupsieve=1.8=py37_0
-sphinx=1.8.5=py37_0
-sphinxcontrib=1.0=py37_1
-sphinxcontrib-websupport=1.1.0=py37_1
-spyder=3.3.3=py37_0
-spyder-kernels=0.4.2=py37_0
-sqlalchemy=1.3.1=py37he774522_0
-sqlite=3.27.2=he774522_0
-statsmodels=0.9.0=py37h452e1ab_0
-streamlit=1.3.1=pypi_0
-sympy=1.3=py37_0
-tbb=2019.4=h74a9793_0
-tblib=1.3.2=py37_0
-tenacity=8.0.1=pypi_0
-terminado=0.8.1=py37_1
-testpath=0.4.2=py37_0
-tk=8.6.8=hfa6e2cd_0
-toml=0.10.2=pypi_0
-toolz=0.9.0=py37_0
-tornado=6.0.2=py37he774522_0
-tqdm=4.31.1=py37_1
-traitlets=4.3.2=py37_0
-twisted=19.2.0=py37he774522_0
-typing-extensions=4.0.1=pypi_0
-tzdata=2021.5=pypi_0
-tzlocal=4.1=pypi_0
-unicodecsv=0.14.1=py37_0
-urllib3=1.24.1=py37_0
-validators=0.18.2=pypi_0
-vc=14.1=h0510ff6_4
-vs2015_runtime=14.15.26706=h3a45250_0
-watchdog=2.1.6=pypi_0
-wcwidth=0.1.7=py37_0
-webencodings=0.5.1=py37_1
-werkzeug=0.14.1=py37_0
-wheel=0.33.1=py37_0
-widgetsnbextension=3.4.2=py37_0
-win_inet_pton=1.1.0=py37_0
-win_unicode_console=0.5=py37_0
-wincertstore=0.2=py37_0
-winpty=0.4.3=4
-wordcloud=1.6.0=py37hfa6e2cd_0
-wrapt=1.11.1=py37he774522_0
-xlrd=1.2.0=py37_0
-xlsxwriter=1.1.5=py37_0
-xlwings=0.15.4=py37_0
-xlwt=1.3.0=py37_0
-xz=5.2.4=h2fa13f4_4
-yaml=0.1.7=hc54c509_2
-zeromq=4.3.1=h33f27b4_3
-zict=0.1.4=py37_0
-zipp=0.3.3=py37_1
-zlib=1.2.11=h62dcd97_3
-zope=1.0=py37_1
-zope.interface=4.6.0=py37he774522_0
-zstd=1.3.7=h508b16e_0
+alabaster==0.7.12
+altair==4.2.0
+altgraph==0.17
+anaconda-client==1.7.2
+anaconda-navigator==1.9.7
+anaconda-project==0.8.2
+appdirs==1.4.4
+argcomplete==1.12.3
+asn1crypto==0.24.0
+astor==0.8.1
+astroid==2.2.5
+astropy==3.1.2
+atomicwrites==1.3.0
+attrs==19.1.0
+Automat==20.2.0
+Babel==2.6.0
+backcall==0.1.0
+backports.os==0.1.1
+backports.shutil-get-terminal-size==1.0.0
+backports.zoneinfo==0.2.1
+base58==2.1.1
+bcrypt==3.1.6
+beautifulsoup4==4.7.1
+bitarray==0.8.3
+bkcharts==0.2
+blaze==0.11.3
+bleach==3.1.0
+blinker==1.4
+bokeh==1.0.4
+boto==2.49.0
+Bottleneck==1.2.1
+cachetools==5.0.0
+certifi==2021.10.8
+cffi==1.12.2
+chardet==3.0.4
+Click==7.0
+cloudpickle==0.8.0
+clyent==1.2.2
+colorama==0.4.1
+comtypes==1.1.7
+conda-verify==3.1.1
+constantly==15.1.0
+contextlib2==0.5.5
+cryptography==2.6.1
+cycler==0.10.0
+Cython==0.29.6
+cytoolz==0.9.0.1
+dask==1.1.4
+datashape==0.5.4
+debugpy==1.5.1
+decorator==4.4.0
+defusedxml==0.5.0
+distributed==1.26.0
+docutils==0.14
+entrypoints==0.3
+et-xmlfile==1.0.1
+fastcache==1.0.2
+filelock==3.0.10
+Flask==1.0.2
+Flask-Cors==3.0.10
+future==0.17.1
+geographiclib==1.50
+geopy==1.22.0
+gevent==1.4.0
+gitdb==4.0.9
+GitPython==3.1.24
+glob2==0.6
+greenlet==0.4.15
+h5py==2.9.0
+heapdict==1.0.0
+html5lib==1.0.1
+hyperlink==21.0.0
+idna==2.8
+imageio==2.5.0
+imagesize==1.1.0
+importlib-metadata==0.0.0
+incremental==21.3.0
+ipykernel==6.6.0
+ipython==7.30.1
+ipython-genutils==0.2.0
+ipywidgets==7.4.2
+isort==4.3.16
+itsdangerous==1.1.0
+jdcal==1.4
+jedi==0.18.1
+Jinja2==3.0.3
+jsonschema==3.0.1
+jupyter==1.0.0
+jupyter-client==5.2.4
+jupyter-console==6.0.0
+jupyter-core==4.4.0
+jupyterlab==0.35.4
+jupyterlab-launcher==0.13.1
+jupyterlab-server==0.2.0
+keyring==18.0.0
+kiwisolver==1.0.1
+lazy-object-proxy==1.3.1
+libarchive-c==2.8
+llvmlite==0.28.0
+locket==0.2.0
+lxml==4.3.2
+MarkupSafe==2.0.1
+matplotlib==3.1.1
+matplotlib-inline==0.1.3
+mccabe==0.6.1
+menuinst==1.4.16
+mistune==0.8.4
+mkl-fft==1.0.10
+mkl-random==1.0.2
+more-itertools==6.0.0
+mpmath==1.1.0
+msgpack==0.6.1
+multipledispatch==0.6.0
+navigator-updater==0.2.1
+nbconvert==5.4.1
+nbformat==4.4.0
+networkx==2.2
+nltk==3.4
+nose==1.3.7
+notebook==5.7.8
+numba==0.43.1
+numexpr==2.6.9
+numpy==1.16.2
+numpydoc==0.8.0
+odo==0.5.1
+olefile==0.46
+openpyxl==2.6.1
+packaging==19.0
+pandas==0.24.2
+pandocfilters==1.4.2
+parso==0.8.3
+partd==0.3.10
+path.py==11.5.0
+pathlib2==2.3.3
+patsy==0.5.1
+pefile==2019.4.18
+pep8==1.7.1
+pickleshare==0.7.5
+Pillow==8.4.0
+pkginfo==1.5.0.1
+plotly==5.5.0
+pluggy==0.9.0
+ply==3.11
+prometheus-client==0.6.0
+prompt-toolkit==3.0.5
+protobuf==3.19.1
+psutil==5.6.1
+py==1.8.0
+pyarrow==6.0.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.5.0
+pycosat==0.6.3
+pycparser==2.19
+pycrypto==2.6.1
+pycurl==7.43.0.2
+pydeck==0.7.1
+pyflakes==2.1.1
+Pygments==2.3.1
+PyHamcrest==2.0.2
+PyInstaller==3.6
+pylint==2.3.1
+Pympler==1.0.1
+pyodbc==4.0.26
+pyOpenSSL==19.0.0
+pyparsing==2.3.1
+pyreadline==2.1
+pyrsistent==0.14.11
+PySocks==1.6.8
+pytest==4.3.1
+pytest-arraydiff==0.3
+pytest-astropy==0.5.0
+pytest-doctestplus==0.3.0
+pytest-openfiles==0.3.2
+pytest-remotedata==0.3.1
+python-dateutil==2.8.0
+pytz==2018.9
+pytz-deprecation-shim==0.1.0.post0
+PyWavelets==1.0.2
+pywin32==223
+pywin32-ctypes==0.2.0
+pywinpty==0.5.5
+PyYAML==5.1
+pyzmq==18.0.0
+QtAwesome==0.5.7
+qtconsole==4.4.3
+QtPy==1.7.0
+requests==2.21.0
+retrying==1.3.3
+rope==0.12.0
+ruamel-yaml==0.15.46
+scikit-image==0.14.2
+scikit-learn==0.20.3
+scipy==1.2.1
+seaborn==0.9.0
+Send2Trash==1.5.0
+service-identity==18.1.0
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
+six==1.12.0
+smmap==5.0.0
+snowballstemmer==1.2.1
+sortedcollections==1.1.2
+sortedcontainers==2.1.0
+soupsieve==1.8
+Sphinx==1.8.5
+sphinxcontrib-websupport==1.1.0
+spyder==3.3.3
+spyder-kernels==0.4.2
+SQLAlchemy==1.3.1
+statsmodels==0.9.0
+streamlit==1.3.1
+sympy==1.3
+tables==3.5.1
+tblib==1.3.2
+tenacity==8.0.1
+terminado==0.8.1
+testpath==0.4.2
+toml==0.10.2
+toolz==0.9.0
+tornado==6.0.2
+tqdm==4.31.1
+traitlets==4.3.2
+Twisted==19.2.0
+typing-extensions==4.0.1
+tzdata==2021.5
+tzlocal==4.1
+unicodecsv==0.14.1
+urllib3==1.24.1
+validators==0.18.2
+watchdog==2.1.6
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.14.1
+widgetsnbextension==3.4.2
+win-inet-pton==1.1.0
+win-unicode-console==0.5
+wincertstore==0.2
+wordcloud==1.6.0
+wrapt==1.11.1
+xlrd==1.2.0
+XlsxWriter==1.1.5
+xlwings==0.15.4
+xlwt==1.3.0
+zict==0.1.4
+zipp==0.3.3
+zope.interface==4.6.0
